[package]
name = "emvault"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmikeska/emvault"
description = "Wrapper crate for the EmVault multi-signature Bitcoin custody architecture."

[lib]
name = "emvault"
path = "src/lib.rs"

[features]
default = []
xpub       = ["dep:emvault-xpub"]
pkcs11     = ["dep:emvault-pkcs11"]
# Nodeless Esplora HTTP chain backend (`emvault::core::esplora_sync`): sync +
# broadcast without a local bitcoind. Pure forward to `emvault-core/esplora`.
esplora    = ["emvault-core/esplora"]
# Enabling `elements` turns on the Elements/Liquid surface in core, pulls in the
# `emvault-elements` companion crate, and — only if `pkcs11` is also enabled —
# activates the HSM's Elements signing path. The `?/` weak-dep syntax means
# `pkcs11` is NOT implied by `elements`; it only forwards the feature when the
# pkcs11 backend is already in the build.
elements   = ["dep:emvault-elements", "emvault-core/elements", "emvault-pkcs11?/elements"]
dev-signer = ["dep:emvault-dev-signer", "pkcs11"]
# Surface test scaffolding (MockSigner, fixtures, Elements testkit) to
# downstream test suites. Weak-dep forwarding keeps it inert for backends that
# aren't part of the build.
test-utils = ["emvault-core/test-utils", "emvault-xpub?/test-utils", "emvault-elements?/test-utils"]

[dependencies]
thiserror = "2"
emvault-core       = { version = "0.2.0", path = "../emvault-core" }
emvault-xpub       = { version = "0.2.0", path = "../emvault-xpub",       optional = true }
emvault-pkcs11     = { version = "0.2.0", path = "../emvault-pkcs11",     optional = true }
emvault-elements   = { version = "0.2.0", path = "../emvault-elements",   optional = true }
emvault-dev-signer = { version = "0.2.0", path = "../emvault-dev-signer", optional = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
